--- a/co-make-db/pom.xml
+++ b/co-make-db/pom.xml
@@ -8,10 +8,10 @@
         <version>2.2.8.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.lambdaschool</groupId>
-    <artifactId>shoppingcart</artifactId>
+    <groupId>com.comake</groupId>
+    <artifactId>server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>shoppingcart</name>
+    <name>server</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
