--- a/co-make-db/src/main/resources/application.properties
+++ b/co-make-db/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Configurations useful for working with H2
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.h2.console.path=/h2
 #
 # We set a port that is not frequently used
 server.port=${PORT:2019}
