--- a/co-make-db/pom.xml
+++ b/co-make-db/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.lambdaschool</groupId>
-    <artifactId>shoppingcart</artifactId>
+    <artifactId>server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>shoppingcart</name>
+    <name>server</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
