--- a/co-make-db/pom.xml
+++ b/co-make-db/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <java.version>11</java.version>
+        <kotlin.version>1.4.30-M1</kotlin.version>
     </properties>
 
     <dependencies>
@@ -96,12 +97,29 @@
         </dependency>
         <!-- Security Dependencies End -->
     </dependencies>
-
     <build>
+        <finalName>sb-sprint</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>3.0.2</version>
+                <configuration>
+                    <appName>${project.build.finalName}</appName>
+                    <includeTarget>false</includeTarget>
+                    <includes>
+                        <include>${project.build.directory}/${project.build.finalName}.jar</include>
+                    </includes>
+                    <jdkVersion>${java.version}</jdkVersion>
+                    <processTypes>
+                        <web>java $JAVA_OPTS -Dserver.port=$PORT -jar target/${project.build.finalName}.jar</web>
+                    </processTypes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
