--- a/co-make-db/pom.xml
+++ b/co-make-db/pom.xml
@@ -96,9 +96,22 @@
             <version>2.3.6.RELEASE</version>
         </dependency>
         <!-- Security Dependencies End -->
+
+        <!-- https://mvnrepository.com/artifact/io.rest-assured/spring-mock-mvc -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>spring-mock-mvc</artifactId>
+            <version>3.3.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
     </dependencies>
     <build>
-        <finalName>sb-sprint</finalName>
+        <finalName>tt-8-bw-comake</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
