--- a/co-make-db/src/main/resources/application.properties
+++ b/co-make-db/src/main/resources/application.properties
@@ -1,6 +1,10 @@
+#Which db to run
+#local.run.db=H2
+local.run.db=POSTGRESQL
 # Configurations useful for working with H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
 #
 # We set a port that is not frequently used
 server.port=${PORT:2019}
@@ -17,7 +21,9 @@ spring.jpa.open-in-view=true
 # What do with the schema
 # drop n create table again, good for testing
 spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
+command.line.runner.enabled=false
 
 #
 # Good for production!
