--- a/co-make-db/src/main/resources/application.properties
+++ b/co-make-db/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Which db to run
-local.run.db=H2
-#local.run.db=POSTGRESQL
+#local.run.db=H2
+local.run.db=POSTGRESQL
 # Configurations useful for working with H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -23,7 +23,7 @@ spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
-#command.line.runner.enabled=false
+command.line.runner.enabled=false
 
 #
 # Good for production!
